# tpe_sia_2025_tp0

./: .gitignore  README.md  Session.vim  analisis.ipynb  ej1b.py  ej2a.py  ej2b.py  ej2c.py  main.py  pokemon.json  pyproject.toml
latex/: analisis_notebook.tex
scripts/: ej1a.py  ej1b.py  ej2b.py  ej2d.py
src/: catching.py  pokeball.py  pokemon.py
