[project]
name = "tpe-sia-2025-tp0"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "jupyter>=1.1.1",
    "matplotlib>=3.10.1",
    "notebook>=7.3.3",
    "numpy>=2.2.3",
    "pandas>=2.2.3",
    "pyqt6>=6.8.1",
    "seaborn>=0.13.2",
]

[tool.black]
line-length = 160
